--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 /* Pagewide Rules */
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     background-color: #f3f5f5;
     color: #4a4a4a;
 }
